--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,12 +11,19 @@
 	      <a href="#" class="brand-logo">World Of Tanks</a>
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	        <li><a href="/">Home</a></li>
-	        <li><a href="/tanks/list">Tank List</a></li>
+	        <li><a href="/tanks/tanks">Tanks</a></li>
 	        <li><a href="#">Another</a></li>
 	      </ul>
 	    </div>
 	  </nav>
 	<%- body %>
+
+<script>
+	document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('select');
+    var instances = M.FormSelect.init(elems);
+  });
+</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
