--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	        <li><a href="/">Home</a></li>
 	        <li><a href="/tanks/">Tanks</a></li>
-	        <li><a href="#">Another</a></li>
+	        <li><a href="/players/">Players</a></li>
 	      </ul>
 	    </div>
 	  </nav>
