added multiple results to player search

--- a/views/players/profile.ejs
+++ b/views/players/profile.ejs
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<h1><%= account.nickname %>'s Career Stats</h1>
+	<h1><%= player.nickname %>'s Career Stats</h1>
 	<a href="#"><h4>Vehicles</h4></a>
 	<ul>
 		<li>Trees Cut: <%= player.statistics.trees_cut %></li>
