--- a/views/players/profile.ejs
+++ b/views/players/profile.ejs
@@ -2,21 +2,70 @@
 
 	<h1><%= player.nickname %>'s Career Stats</h1>
 	<a href="#"><h4>Vehicles</h4></a>
-	<ul>
-		<li>Trees Cut: <%= player.statistics.trees_cut %></li>
-		<li>Win Rate: <%= ((player.statistics.all.wins/player.statistics.all.battles)*100).toFixed(2) %>%
-		<li>Total Battles: <%= player.statistics.all.battles %></li>
-		<li>Wins: <%= player.statistics.all.wins %></li>
-		<li>Losses: <%= player.statistics.all.losses %></li>
-		<li>Draws: <%= (player.statistics.all.battles - player.statistics.all.wins - player.statistics.all.losses) %></li>
-		<li>Survival Rate: <%= ((player.statistics.all.survived_battles/player.statistics.all.battles)*100).toFixed(2) %>%</li>
-		<li>Player Rating: <%= player.global_rating %></li>
-		<li>Most XP: <%= player.statistics.max_xp %> XP in the <%= tanks[player.statistics.max_xp_tank_id].name %></li>
-		<li>Most Kills: <%= player.statistics.max_frags %> in the <%= tanks[player.statistics.max_frags_tank_id].name %></li>
-		<li>Most Damage: <%= player.statistics.max_damage %> in the <%= tanks[player.statistics.max_damage_tank_id].name %></li>
-		<li>Last Battle Played: <%= convertDate(player.last_battle_time) %></li>
-		<li>Playing Since: <%= convertDate(player.created_at) %></li>
-	</ul>
+
+	<table>
+        <thead>
+          <tr>
+              <th>All Time</th>
+              <th>Stats</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>Trees Cut</td>
+            <td><%= player.statistics.trees_cut %></td>
+          </tr>
+          <tr>
+            <td>Win Rate</td>
+            <td><%= ((player.statistics.all.wins/player.statistics.all.battles)*100).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td>Battles</td>
+            <td><%= player.statistics.all.battles %></td>
+          </tr>
+          <tr>
+            <td>Wins</td>
+            <td><%= player.statistics.all.wins %></td>
+          </tr>
+          <tr>
+            <td>Losses</td>
+            <td><%= player.statistics.all.losses %></td>
+          </tr>
+          <tr>
+            <td>Draws</td>
+            <td><%= (player.statistics.all.battles - player.statistics.all.wins - player.statistics.all.losses) %></td>
+          </tr>
+          <tr>
+            <td>Survival Rate</td>
+            <td><%= ((player.statistics.all.survived_battles/player.statistics.all.battles)*100).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td>Player Rating</td>
+            <td><%= player.global_rating %></td>
+          </tr>
+          <tr>
+            <td>Most XP</td>
+            <td><%= player.statistics.max_xp %> XP in the <%= tanks[player.statistics.max_xp_tank_id].name %></td>
+          </tr>
+          <tr>
+            <td>Most Damage</td>
+            <td><%= player.statistics.max_damage %> damage in the <%= tanks[player.statistics.max_damage_tank_id].name %></td>
+          </tr>
+          <tr>
+            <td>Most Kills</td>
+            <td><%= player.statistics.max_frags %> in the <%= tanks[player.statistics.max_frags_tank_id].name %></td>
+          </tr>
+          <tr>
+            <td>Last Battle</td>
+            <td><%= convertDate(player.last_battle_time) %></td>
+          </tr>
+          <tr>
+            <td>Tanking Since</td>
+            <td><%= convertDate(player.created_at) %></td>
+          </tr>
+        </tbody>
+      </table>
 </div>
 
 <% function convertDate(stamp){ %>
@@ -28,6 +77,6 @@
 	<% var hours = date.getHours(); %>
 	<% var minutes = "0" + date.getMinutes(); %>
 	<% var seconds = "0" + date.getSeconds(); %>
-	<% var displayDate = month+'-'+day+'-'+year+' '+hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2); %>
+	<% var displayDate = month+'-'+day+'-'+year %>
 	<% return displayDate %>
 <% } %>
