EOD, added username prompt for log ins

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
 <body>
 	<nav>
 	    <div class="nav-wrapper">
-	      <a href="#" class="brand-logo">World Of Tanks</a>
+	      <a href="#" class="brand-logo title-btn">World Of Tanks Companion App</a>
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	        <li><a href="/">Home</a></li>
 	        <li><a href="/tanks/">Tanks</a></li>
@@ -17,11 +17,10 @@
 		    <li><a href="/auth/login">Login</a></li>
 		    <li><a href="/auth/signup">Sign Up</a></li>
 		    <% } else { %>
-		    <li>Hello, <%= user.username %></li>
 		    	<% if(user.admin){ %>
 			    	<li><a href="/profile/admin">Admin</a></li>
 			   	<% } %>
-			    <li><a href="/profile">Profile</a></li>
+			    <li><a href="/profile"><%= user.username %></a></li>
 			    <li><a href="/auth/logout">Log Out</a></li>
 
 			<% } %>
