--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,6 @@ nav {
  	font-size: 24px;
  }
 
-/*
- .package-header {
- 	font-weight: bold;
- }*/
+.title-btn {
+ 	padding-left: 15px !important;
+ }
