--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,3 +10,18 @@
 <% } %>
 
 <img src="<%= user.image %>">
+
+<form action="/players/account/<%= player.account_id %>" method="GET">
+  <input type="hidden" name="player" value="<%= player.nickname %>">
+  <input type="submit" value="My Career Stats">
+</form>
+
+<form action="/players/account/<%= player.account_id %>/recent-vehicles" method="GET">
+  <input type="hidden" name="player" value="<%= player.nickname %>">
+  <input type="submit" value="My Recently Played Vehicles">
+</form>
+
+<form action="/players/account/<%= player.account_id %>/####" method="GET">
+  <input type="hidden" name="player" value="<%= player.nickname %>">
+  <input type="submit" value="My Vehicles to Grind">
+</form>
